<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobile Wellness dApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_animation">Image Animation</string>

    <!-- StartFragment -->
    <string name="button_start">Start</string>
    <string name="label_welcome_to">Welcome to</string>
    <string name="label_bowhealths">Bowhead\'s</string>
    <string name="label_product_name">Wellness logger</string>

    <!-- CreatePasswordFragment -->
    <string name="label_create_password">Create a Password</string>
    <string name="hint_password">Password</string>
    <string name="button_lets_go">Lets Go!</string>

    <!-- WellnessTrackingFragment -->
    <string name="title_wellness_tracking">Wellness Tracking</string>
    <string name="label_track_your_wellness">Track your wellness</string>
    <string name="label_question_1">How do you feel?</string>
    <string name="label_group_1_opt_1">Perfect, thank you!</string>
    <string name="label_group_1_opt_2">Meh, I\'m alive</string>
    <string name="label_group_1_opt_3">Worst day ever</string>
    <string name="label_question_2">Did you sleep well?</string>
    <string name="label_group_2_opt_1">Yes</string>
    <string name="label_group_2_opt_2">No</string>
    <string name="button_submit">Submit</string>

    <!-- AnswerLogsFragment -->
    <string name="title_answer_logs">Answer Logs</string>
    <string name="label_title">Answer Logs</string>
    <string name="label_feeling">Feeling:</string>
    <string name="label_sleep_quality">Sleep quality:</string>
    
    <!-- SharedPreferences -->
    <string name="preference_app_data">preferenceAppData</string>
    <string name="is_first_experience">isFirstExperience</string>
    <string name="wallet_directory">walletDirectory</string>
    <string name="saved_password">password</string>

    <!-- ViewModel -->
    <string name="value_group_1_opt_1">FIRST</string>
    <string name="value_group_1_opt_2">SECOND</string>
    <string name="value_group_1_opt_3">THIRD</string>

    <string name="value_group_2_opt_1">YES</string>
    <string name="value_group_2_opt_2">NO</string>

    <!-- NotificationChannel -->
    <string name="channel_id">dev_challenge_channel</string>
    <string name="channel_name">Dev Challenge</string>
    <string name="channel_description">New reward earned</string>
    <string name="notification_title">New reward!</string>
    <string name="notification_content">...</string>
</resources>