<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.TextUtils" />

        <variable
            name="viewmodel"
            type="com.daniel.estrada.mobilewellnessdapp.viewmodels.PasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".screens.welcome.CreatePasswordFragment">

        <ImageView
            android:transitionName="@string/shared_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grupo_1509"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/label_create_password"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLetsGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="80dp"
            android:text="@string/button_lets_go"
            android:textAllCaps="false"
            android:enabled="@{!TextUtils.isEmpty(viewmodel.password)}"/>

    </LinearLayout>
</layout>